objects/Veeva_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>auth_domain__c</fullName>
        <label>auth-domain</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>widget_id__c</fullName>
        <label>widget-id</label>
        <length>155</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Veeva Configuration</label>
    <pluralLabel>Veeva Configurations</pluralLabel>
</CustomObject>